# [Make a Combined Library and Binary Project in Rust](https://dev.to/yjdoc2/make-a-combined-library-and-binary-project-in-rust-d4f)

[package]
name = "reservoir_sampling"
version = "0.1.0"
edition = "2021"
authors = ["Samuel Larkin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "3.1.1", features = ["derive"] }

[[bin]]
name = "reservoir_sampling"
path = "src/main.rs"

[lib]
name = "reservoir_sampling"
path = "src/lib.rs"
